# rust-deep-agents-sdk

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  HITL_IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  TODO.md
.claude/agents/: rust-agent-sdk-architect.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
.github/workflows/: docs.yml  release.yml
book/: book.toml
book/src/: README.md  SUMMARY.md  changelog.md  contributing.md
book/src/api/: agents-sdk.md  builder.md  events.md  tool-macro.md
book/src/concepts/: agents.md  deep-agents.md  messages.md  middleware.md  state.md  tools.md
book/src/deployment/: aws-lambda.md  docker.md  kubernetes.md
book/src/examples/: hitl-financial-advisor.md  overview.md  simple-agent.md  tool-creation.md  web-service.md
book/src/features/: events.md  hitl.md  mcp.md  pii-sanitization.md  streaming.md  sub-agents.md  token-tracking.md  toon-format.md
book/src/getting-started/: configuration.md  first-agent.md  installation.md  quick-start.md
book/src/persistence/: dynamodb.md  in-memory.md  overview.md  postgresql.md  redis.md
book/src/providers/: anthropic.md  gemini.md  openai.md  overview.md
crates/agents-aws/: Cargo.toml
crates/agents-aws/src/: dynamodb_checkpointer.rs  lib.rs
crates/agents-core/: Cargo.toml
crates/agents-core/src/: agent.rs  command.rs  events.rs  hitl.rs  lib.rs  llm.rs  messaging.rs  persistence.rs  prompts.rs  security.rs  state.rs  tools.rs  toon.rs
crates/agents-macros/: Cargo.toml
crates/agents-macros/src/: lib.rs
crates/agents-macros/tests/: test_macro.rs
crates/agents-mcp/: Cargo.toml  README.md
crates/agents-mcp/src/: client.rs  lib.rs  tool_adapter.rs
crates/agents-mcp/src/protocol/: error.rs  messages.rs  mod.rs  types.rs
crates/agents-mcp/src/transport/: http.rs  mod.rs  stdio.rs
crates/agents-persistence/: Cargo.toml  README.md
crates/agents-persistence/src/: lib.rs  postgres_checkpointer.rs  redis_checkpointer.rs
crates/agents-runtime/: Cargo.toml
crates/agents-runtime/src/: graph.rs  graph.rs.backup  graph.rs.tests  lib.rs  middleware.rs  planner.rs  prompts.rs
crates/agents-runtime/src/agent/: api.rs  builder.rs  builtin_tools_parity_tests.rs  config.rs  mod.rs  runtime.rs
crates/agents-runtime/src/middleware/: token_tracking.rs
crates/agents-runtime/src/providers/: anthropic.rs  gemini.rs  mod.rs  openai.rs
crates/agents-sdk/: Cargo.toml
crates/agents-sdk/src/: lib.rs
crates/agents-toolkit/: Cargo.toml
crates/agents-toolkit/src/: builder.rs  filesystem.rs  lib.rs  macros.rs  search.rs  todos.rs  tools.rs
crates/agents-toolkit/src/adapters/: function_tool.rs  mod.rs
crates/agents-toolkit/src/builtin/: filesystem.rs  mod.rs  todos.rs
deploy/: README.md
docs/: BUG_FIX_OPENAI_TOOLS.md  BUG_FIX_SUMMARY.md  CHECKPOINTER_IMPLEMENTATIONS.md  EVENT_SYSTEM.md  MCP_INTEGRATION_PLAN.md  MIGRATION_GUIDE.md  README.md  ROADMAP.md  SECURITY.md  TOKEN_TRACKING.md  TOON_FORMAT.md
docs/adr/: 0001-cli-harness-over-whatsapp.md
docs/reference/: deep-agents.md
examples/: README.md
examples/anthropic-custom-headers/: Cargo.toml  README.md
examples/anthropic-custom-headers/src/: main.rs
examples/anthropic-tools-test/: Cargo.toml
examples/anthropic-tools-test/src/: main.rs
examples/automotive-service-uae/: Cargo.toml  README.md
examples/automotive-service-uae/src/: main.rs
examples/automotive-web-service/: Cargo.toml  README.md
examples/automotive-web-service/frontend/: package-lock.json  package.json  tailwind.config.js
examples/automotive-web-service/frontend/src/: App.tsx  index.css
examples/automotive-web-service/frontend/src/components/: AgentActivity.tsx  ChatInput.tsx  ChatMessage.tsx  EnhancedChat.tsx  FeaturePanel.tsx
examples/automotive-web-service/frontend/src/hooks/: useSSE.ts
examples/automotive-web-service/frontend/src/types/: index.ts
examples/automotive-web-service/src/: main.rs
examples/chat-web-ui/: README.md  index.html  package-lock.json  package.json  vite.config.js
examples/checkpointer-demo/: Cargo.toml  README.md
examples/checkpointer-demo/src/: main.rs
examples/cli-agent/: Cargo.toml  README.md
examples/cli-agent/src/: main.rs
examples/deep-agent-server/: .env.example  Cargo.toml  README.md  test_api.sh
examples/deep-agent-server/src/: main.rs
examples/deep-agent-test/: Cargo.toml
examples/deep-agent-test/src/: main.rs
examples/deep-research-agent/: .env.example  Cargo.toml  README.md
examples/deep-research-agent/src/: main.rs
examples/event-system-demo/: Cargo.toml
examples/event-system-demo/src/: main.rs
examples/gemini-tools-test/: Cargo.toml
examples/getting-started/: Cargo.toml  README.md
examples/getting-started/src/: main.rs
examples/hitl-demo/: Cargo.toml
examples/hitl-demo/src/: main.rs
examples/hitl-financial-advisor/: Cargo.toml  README.md
examples/hitl-financial-advisor/src/: main.rs
examples/http-mcp-demo/: Cargo.toml  README.md
examples/http-mcp-demo/src/: main.rs
examples/mcp-demo/: Cargo.toml  README.md
examples/mcp-demo/src/: main.rs
examples/mcp-subagent-demo/: Cargo.toml  README.md
examples/mcp-subagent-demo/src/: main.rs
examples/pii-sanitization-demo/: Cargo.toml  README.md
examples/pii-sanitization-demo/src/: main.rs
examples/react-loop-demo/: Cargo.toml
examples/react-loop-demo/src/: main.rs
examples/simple-agent/: .env.example  Cargo.toml
examples/state-persistence-test/: Cargo.toml
examples/state-persistence-test/src/: main.rs
examples/streaming-events-demo/: Cargo.toml
examples/streaming-events-demo/src/: main.rs
examples/subagent-demo/: Cargo.toml
examples/subagent-demo/src/: main.rs
examples/subagent-demo/src/tools/: calculator.rs  mod.rs  web_search.rs
examples/token-tracking-demo/: Cargo.toml
examples/tool-test/: Cargo.toml  README.md
examples/toon-format-demo/: Cargo.toml  README.md
examples/unified-sdk-test/: Cargo.toml
scripts/: release.sh
(+9 files in other folders)
