[workspace]
members = [
    "crates/agents-core",
    "crates/agents-runtime",
    "crates/agents-toolkit",
    "crates/agents-aws",
    "examples/getting-started",
    "examples/cli-agent",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
license-file = "LICENSE"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
async-trait = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
