[workspace]
members = [
    "crates/agents-core",
    "crates/agents-runtime",
    "crates/agents-toolkit",
    "crates/agents-aws",
    "crates/agents-sdk",
    "crates/agents-macros",
    "examples/simple-agent",
    "examples/deep-research-agent",
    "examples/deep-agent-server",
    "examples/unified-sdk-test",
    "examples/subagent-demo",
    "examples/automotive-service-uae",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
license-file = "LICENSE"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
async-trait = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
futures = "0.3"
