[workspace]
members = [
    "crates/agents-core",
    "crates/agents-runtime",
    "crates/agents-toolkit",
    "crates/agents-aws",
    "crates/agents-sdk",
    "crates/agents-macros",
    "crates/agents-persistence",
    # "examples/simple-agent",  # TODO: Update to use #[tool] macro
    # "examples/deep-research-agent",  # TODO: Update to use #[tool] macro
    # "examples/deep-agent-server",  # TODO: Update to use #[tool] macro
    "examples/unified-sdk-test",
    "examples/subagent-demo",
    "examples/automotive-service-uae",
    "examples/automotive-web-service",
    # "examples/checkpointer-demo",  # TODO: Update to use #[tool] macro
    "examples/tool-test",
    "examples/anthropic-tools-test",
    "examples/anthropic-custom-headers",
    "examples/gemini-tools-test",
    "examples/deep-agent-test",
    "examples/hitl-demo",
    "examples/hitl-financial-advisor",
    "examples/react-loop-demo",
    "examples/event-system-demo",
    "examples/pii-sanitization-demo",
    "examples/streaming-events-demo",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
license-file = "LICENSE"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
async-trait = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
futures = "0.3"
async-stream = "0.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
