[package]
name = "agents-aws"
version = "0.0.24"
edition = "2021"
description = "AWS integrations for the Rust deep agents SDK."
authors = ["YAFATEK <hello@yafatek.dev>"]
license = "MIT"
repository = "https://github.com/yafatek/rust-deep-agents-sdk"
homepage = "https://github.com/yafatek/rust-deep-agents-sdk"
documentation = "https://docs.rs/agents-aws"
keywords = ["ai", "agents", "llm", "aws", "cloud"]
categories = ["api-bindings", "development-tools"]
readme = "../../README.md"

[dependencies]
agents-core = { path = "../agents-core", version = "0.0.24" }
anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }

# AWS SDK dependencies (optional)
aws-config = { version = "1.5", optional = true }
aws-sdk-dynamodb = { version = "1.52", optional = true }
aws-sdk-secretsmanager = { version = "1.50", optional = true }
chrono = { version = "0.4", optional = true }

[features]
default = []
dynamodb = ["dep:aws-config", "dep:aws-sdk-dynamodb", "dep:chrono"]
secrets = ["dep:aws-config", "dep:aws-sdk-secretsmanager"]
aws-sdk = ["dynamodb", "secrets"]

[package.metadata.docs.rs]
# Build docs with all features enabled
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
