[package]
name = "agents-core"
version = "0.0.23"
edition = "2021"
description = "Core traits, data models, and prompt primitives for building deep agents."
authors = ["YAFATEK <hello@yafatek.dev>"]
license = "MIT"
repository = "https://github.com/yafatek/rust-deep-agents-sdk"
homepage = "https://github.com/yafatek/rust-deep-agents-sdk"
documentation = "https://docs.rs/agents-core"
keywords = ["ai", "agents", "llm", "automation"]
categories = ["api-bindings", "development-tools"]
readme = "../../README.md"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
lazy_static = "1.4"
regex = "1.10"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
