[package]
name = "agents-mcp"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Model Context Protocol (MCP) client for the Rust Deep Agents SDK"
keywords = ["mcp", "model-context-protocol", "ai", "agents", "tools"]
categories = ["development-tools", "asynchronous"]

[dependencies]
# Internal dependencies
agents-core = { path = "../agents-core" }

# Serialization (from workspace)
serde.workspace = true
serde_json.workspace = true

# Async runtime (from workspace)
tokio = { workspace = true, features = ["process", "io-util", "sync", "time"] }
async-trait.workspace = true
futures.workspace = true

# Logging (from workspace)
tracing.workspace = true

# Error handling (from workspace)
anyhow.workspace = true
thiserror.workspace = true

# UUID for request IDs
uuid.workspace = true

[features]
default = ["stdio"]
stdio = []

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

