[package]
name = "agents-mcp"
version = "0.0.30"
edition.workspace = true
license.workspace = true
repository = "https://github.com/yafatek/rust-deep-agents-sdk"
homepage = "https://github.com/yafatek/rust-deep-agents-sdk"
documentation = "https://docs.rs/agents-mcp"
description = "Model Context Protocol (MCP) client for the Rust Deep Agents SDK - enables external tool integration"
keywords = ["mcp", "model-context-protocol", "ai", "deep-agents", "tools"]
categories = ["development-tools", "asynchronous"]
readme = "README.md"

[dependencies]
# Internal dependencies
agents-core = { path = "../agents-core" }

# Serialization (from workspace)
serde.workspace = true
serde_json.workspace = true

# Async runtime (from workspace)
tokio = { workspace = true, features = ["process", "io-util", "sync", "time"] }
async-trait.workspace = true
futures.workspace = true

# Logging (from workspace)
tracing.workspace = true

# Error handling (from workspace)
anyhow.workspace = true
thiserror.workspace = true

# UUID for request IDs
uuid.workspace = true

# HTTP client (optional, for HTTP transport)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"], optional = true }

[features]
default = ["stdio"]
stdio = []
http = ["dep:reqwest"]

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

