[package]
name = "agents-runtime"
version = "0.0.1"
edition = "2021"
description = "Async runtime orchestration for Rust deep agents."

[dependencies]
agents-core = { path = "../agents-core" }
agents-toolkit = { path = "../agents-toolkit" }
anyhow = { workspace = true }
async-trait = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { workspace = true }
futures-util = "0.3.31"

[dev-dependencies]
tokio = { workspace = true }
serde_json = { workspace = true }
