[package]
name = "agents-runtime"
version = "0.0.13"
edition = "2021"
description = "Async runtime orchestration for Rust deep agents."
authors = ["YAFATEK <hello@yafatek.dev>"]
license = "MIT"
repository = "https://github.com/yafatek/rust-deep-agents-sdk"
homepage = "https://github.com/yafatek/rust-deep-agents-sdk"
documentation = "https://docs.rs/agents-runtime"
keywords = ["ai", "agents", "llm", "runtime", "async"]
categories = ["api-bindings", "development-tools"]
readme = "../../README.md"

[dependencies]
agents-core = { path = "../agents-core", version = "0.0.13" }
agents-toolkit = { path = "../agents-toolkit", version = "0.0.13" }
anyhow = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { workspace = true }
futures-util = "0.3.31"

[dev-dependencies]
tokio = { workspace = true }
serde_json = { workspace = true }
