[package]
name = "agents-toolkit"
version = "0.0.1"
edition = "2021"
description = "Reusable tools and utilities for Rust deep agents."

[dependencies]
agents-core = { path = "../agents-core" }
anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
