[package]
name = "anthropic-custom-headers"
version = "0.1.0"
edition = "2024"
description = "Example demonstrating custom headers with the Anthropic provider"

[dependencies]
agents-sdk = { path = "../../crates/agents-sdk", features = ["full"] }
agents-core = { path = "../../crates/agents-core" }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenv = "0.15"
