[package]
name = "anthropic-tools-test"
version = "0.1.0"
edition = "2021"

[dependencies]
agents-sdk = { path = "../../crates/agents-sdk", features = ["full"] }
agents-core = { path = "../../crates/agents-core" }
agents-macros = { path = "../../crates/agents-macros" }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenv = "0.15"
async-trait = "0.1"
serde_json = "1"

