[package]
name = "automotive-service-uae"
version = "0.1.0"
edition = "2021"

[dependencies]
agents-sdk = { path = "../../crates/agents-sdk", features = ["full"] }
agents-core = { path = "../../crates/agents-core" }
async-trait = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
uuid = { version = "1.0", features = ["v4"] }
chrono = "0.4"
dotenv = "0.15.0"