[package]
name = "automotive-web-service"
version = "0.1.0"
edition = "2021"

[dependencies]
agents-sdk = { path = "../../crates/agents-sdk", features = ["full"] }
agents-core = { path = "../../crates/agents-core" }
async-trait = { workspace = true }
async-stream = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15.0"
tracing = { workspace = true }
tracing-subscriber = "0.3"

# Web server
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
tokio-stream = "0.1"

# Serialization
serde_qs = "0.13"