[package]
name = "checkpointer-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
agents-sdk = { path = "../../crates/agents-sdk", features = ["toolkit"] }
agents-core = { path = "../../crates/agents-core" }
agents-runtime = { path = "../../crates/agents-runtime" }

# Optional features for different backends
agents-persistence = { path = "../../crates/agents-persistence", optional = true }
agents-aws = { path = "../../crates/agents-aws", optional = true }

anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
serde_json = "1"
dotenv = "0.15"
tracing-subscriber = "0.3"
clap = { version = "4", features = ["derive"] }

[features]
default = []
redis = ["agents-persistence/redis"]
postgres = ["agents-persistence/postgres"]
dynamodb = ["agents-aws/dynamodb"]
all = ["redis", "postgres", "dynamodb"]