[package]
name = "agents-example-cli"
version = "0.0.1"
edition = "2021"
description = "CLI harness for the Rust Deep Agents SDK (example-only)."

[dependencies]
agents-core = { path = "../../crates/agents-core" }
agents-runtime = { path = "../../crates/agents-runtime" }
agents-toolkit = { path = "../../crates/agents-toolkit" }
anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { workspace = true }
dotenvy = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
