[package]
name = "deep-agent-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "deep-agent-server"
path = "src/main.rs"

[dependencies]
agents-sdk = { path = "../../crates/agents-sdk", features = ["full"] }
agents-core = { path = "../../crates/agents-core" }
anyhow = "1"
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
axum = { version = "0.7", features = ["json", "tokio"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
clap = { version = "4.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
