[package]
name = "deep-research-agent"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "deep-research-agent"
path = "src/main.rs"

[dependencies]
agents-core = { path = "../../crates/agents-core" }
agents-runtime = { path = "../../crates/agents-runtime" }
agents-toolkit = { path = "../../crates/agents-toolkit" }
anyhow = "1"
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = "0.3"
dotenv = "0.15"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.0", features = ["derive"] }
