[package]
name = "hitl-financial-advisor"
version = "0.1.0"
edition = "2021"

[dependencies]
agents-sdk = { path = "../../crates/agents-sdk", features = ["toolkit"] }
agents-core = { path = "../../crates/agents-core" }
agents-runtime = { path = "../../crates/agents-runtime" }
anyhow = "1.0"
async-trait = "0.1"
tokio = { version = "1.42", features = ["full"] }
dotenv = "0.15"
serde_json = "1.0"
