[package]
name = "mcp-demo"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
agents-sdk = { path = "../../crates/agents-sdk", features = ["toolkit", "mcp"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_json = { workspace = true }

