[package]
name = "mcp-subagent-demo"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
agents-sdk = { path = "../../crates/agents-sdk", features = ["mcp", "toolkit"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenv = "0.15"
