[package]
name = "streaming-events-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
agents-core = { path = "../../crates/agents-core" }
agents-sdk = { path = "../../crates/agents-sdk" }
agents-macros = { path = "../../crates/agents-macros" }
tokio = { version = "1.48", features = ["full"] }
anyhow = "1.0"
async-trait = "0.1"
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
futures = "0.3"
