[package]
name = "subagent-demo"
version = "0.1.0"
edition.workspace = true
license.workspace = true
license-file.workspace = true

[dependencies]
agents-core = { path = "../../crates/agents-core" }
agents-runtime = { path = "../../crates/agents-runtime" }
agents-toolkit = { path = "../../crates/agents-toolkit" }
anyhow = { workspace = true }
dotenv = "0.15"
meval = "0.2"
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = "0.3"
