[package]
name = "subagent-demo"
version = "0.1.0"
edition.workspace = true
license.workspace = true
license-file.workspace = true

[dependencies]
agents-core = { path = "../../crates/agents-core" }
agents-runtime = { path = "../../crates/agents-runtime" }
agents-toolkit = { path = "../../crates/agents-toolkit" }
anyhow = { workspace = true }
dotenv = "0.15"
meval = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = "0.3"
