[package]
name = "subagent-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
agents-sdk = { path = "../../crates/agents-sdk", features = ["full"] }
agents-core = { path = "../../crates/agents-core" }
async-trait = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
dotenv = "0.15.0"